--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   </head>
   <body>
     <div id="modal">
-      <h2>Error!</h2>
+      <h2 >Error!</h2>
+      <p id="modal-message"></p>
+    </div>
+    <div id="clicked-heart">
+      <h2 >Liked Post</h2>
       <p id="modal-message"></p>
     </div>
 
